--- a/css/style.css
+++ b/css/style.css
@@ -32,4 +32,92 @@ a {
     margin-right: auto;
     
 }
+nav {
+    background: linear-gradient(90deg, rgba(14,14,147,1) 0%, rgba(0,212,255,1) 100%);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.nav, ul {
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+}
+
+.nav, li {
+    display: inline-block;
+    padding: 10px;
+}
+
+.nav, .li, a {
+    color: black;
+    text-decoration: none;
     
+}
+
+.nav, li.current {
+    background-color: rgba(255,255,255,0.2);
+}
+
+.nav, li:hover {
+    background-color: darkslategray;
+}
+.table1{
+    position: absolute;
+    background-color: yellow;   
+    height:40px;
+    margin-top: 2%;
+    
+}
+
+.table1:hover{
+    background-color: whitesmoke;
+    border: 4px solid black;
+    cursor: help 
+}
+
+
+.table2{
+    position: absolute;
+    background-color: red;
+    height:40px;
+    margin-top: 5%;
+}
+
+.table2:hover{
+    
+    background-color: white;
+    padding: 1px;
+    border: 4px solid black;
+    cursor: help 
+}
+
+.table3{
+    position: absolute;
+    background-color: blue;
+    height:40px;
+    margin-top: 8%;
+}
+
+.table3:hover{
+    position: center;
+    background-color: whitesmoke;
+    padding: 1px;
+    border: 4px solid black;
+    cursor: help 
+}
+.opdrachtD { 
+    background: rgba(130,130,130,0.5);
+    padding: 20px;
+}
+
+svg.cross { 
+    background: silver; 
+    margin: 50px auto; 
+    display: block; 
+}
+svg.cross path { 
+    fill: gold; 
+    stroke: red; 
+    stroke-width: 0.1; 
+    stroke-linejoin: round; 
+}
