--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ nav {
 
 .table3{
     position: absolute;
-    background-color: blue;
+    background-color:green;
     height:40px;
     margin-top: 8%;
 }
