--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     background-image: url("../img/xp.jpg");
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     height: 100%;
 }
 
@@ -186,6 +187,7 @@ svg.cross path {
     90% {color: #8000ff;}
     100% {color: #ff0080;}
     }
+
     footer {
         text-align: center;
         padding: 0px;
